--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
         class="styles"
         type="text"
         id="name"
-        placeholder="please enter your name"
+        placeholder="Please enter your name"
       />
       <input
         class="styles"
         type="text"
         id="surname"
-        placeholder="please enter your last name"
+        placeholder="Please enter your last name"
       />
       <input
         class="styles"
         type="number"
         id="age"
-        placeholder="please enter your age"
+        placeholder="Please enter your age"
       />
       <input
         class="styles"
         type="email"
         id="email"
-        placeholder="please enter your email"
+        placeholder="Please enter your email"
       />
       <input
         class="styles"
         type="number"
         id="tel"
-        placeholder="please enter your tel"
+        placeholder="Please enter your tel"
       />
       <select class="styles" id="nat">
         <option value="uzbek">Uzbek</option>
@@ -49,13 +49,13 @@
         id="des"
         cols="30"
         rows="10"
-        placeholder="please enter description"
+        placeholder="Please enter description"
       ></textarea>
       <input
         class="styles"
         id="poosword"
         type="password"
-        placeholder="please enter password"
+        placeholder="Please enter password"
       />
       <button class="styles-btn" id="button">Saqlash</button>
       <button id="btn">Uchirish</button>
